<resources>
    <string name="app_name">Brains</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    
    <string name="menu_logout">Logout</string>
    <string name="default_news">Scrolling News stays here. Wait for the next update...</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <!-- PARSE API APP NAME -->

    <!-- Paste BOTH strings as required -->
    <string name="back4app_app_id">UrydU60Maz4FovwzROrT96HIha6mpeompN0y6P1D</string>
    <string name="back4app_client_key">mVxfhUakKzdwDFVLw5fqYGYrzLaxuXescDqeoxU2</string>
    
    <string name="displays_news">Displays news and updates in Brains</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="top_image">Holds the top image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password1@</string>
    <string name="email">username@domain.com</string>
    <string name="submit">submit</string>
    <string name="log_in">LOG IN</string>
    <string name="brains_logo">Holds Brains Logo</string>
    <string name="username">Username</string>
    <string name="file_upload">FILE UPLOAD</string>
    <string name="upload_file_here">Upload file here...</string>
    <string name="pick">Pick</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="modify_models">Modify Models</string>
    <string name="not_a_member">Not a Member? Sign up now!</string>
    <string name="email_icon">email icon</string>
    <string name="password_icon">password icon</string>
    <string name="already_a_member">Already a Member? Sign in now!</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="get_connected">Get connected with other great minds</string>
    <string name="welcome">Welcome</string>
    <string name="icon">icon</string>
    <string name="child_node">Child Node Here...</string>
    <string name="pick_file">pick file</string>
    <string name="edit_profile">Edit Profile</string>

</resources>